objects/GAVS_PROJECT__c/GAVS_PROJECT__c.object-meta.xml
<CustomObject>
    <label>GAVS PROJECT</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GAVS PROJECTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>