objects/GAVS_PROJECT__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>