objects/GAVS_PROJECT__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Client Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>