objects/GAVS_PROJECT__c/fields/Client_Site__c.field-meta.xml
<CustomField>
    <fullName>Client_Site__c</fullName>
    <label>Client_Site</label>
    <type>Url</type>
</CustomField>