objects/GAVS_PROJECT__c/fields/Email_ID_Of_Client__c.field-meta.xml
<CustomField>
    <fullName>Email_ID_Of_Client__c</fullName>
    <label>Email ID Of Client</label>
    <type>Email</type>
</CustomField>