objects/GAVS_PROJECT__c/fields/End_Date_With_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_With_Time__c</fullName>
    <label>End Date With Time</label>
    <type>DateTime</type>
</CustomField>