objects/GAVS_PROJECT__c/fields/Member_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Member_Of_Project__c</fullName>
    <label>Member Of Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>