objects/GAVS_PROJECT__c/fields/On_Going__c.field-meta.xml
<CustomField>
    <fullName>On_Going__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Going</label>
    <type>Checkbox</type>
</CustomField>