objects/GAVS_PROJECT__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary_Contact</label>
    <type>Phone</type>
</CustomField>