objects/GAVS_PROJECT__c/fields/Sprint_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Completed__c</fullName>
    <label>Sprint_Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sprint_1</fullName>
            </value>
            <value>
                <fullName>Sprint_2</fullName>
            </value>
            <value>
                <fullName>Sprint_3</fullName>
            </value>
            <value>
                <fullName>Sprint_4</fullName>
            </value>
            <value>
                <fullName>Sprint_5</fullName>
            </value>
            <value>
                <fullName>Sprint_6</fullName>
            </value>
            <value>
                <fullName>Sprint_7</fullName>
            </value>
            <value>
                <fullName>Sprint_8</fullName>
            </value>
            <value>
                <fullName>Sprint_9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>