objects/GAVS_PROJECT__c/fields/Started_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Time__c</fullName>
    <label>Started_Time</label>
    <type>Time</type>
</CustomField>